2008-10-02  Thomas Schwinge  <tschwinge@gnu.org>

	* glue-include/linux/socket.h: Revert last change.
	(MSG_NOSIGNAL): Guard definition and add a compile-time warning.

2008-07-11  Samuel Thibault  <samuel.thibault@ens-lyon.org>

	* glue-include/linux/socket.h (MSG_NOSIGNAL): Remove macro.

2008-06-10  Samuel Thibault  <samuel.thibault@ens-lyon.org>

	* glue-include/linux/if.h (IFF_DYNAMIC): Remove macro.

2007-10-14  Stefan Siegl  <stesie@brokenpipe.de>

	* options.c (ipv6_get_dflt_router) [CONFIG_IPV6]: New function.
	(parse_opt) [CONFIG_IPV6]: Don't delete IPv6 interface address, if
	it would be re-added immediately, but delete if otherwise.
	Do not touch inet6_ifaddr after inet6_addr_del was called.
	Don't purge and re-add IPv6 default router unless necessary.
	(trivfs_append_args) [CONFIG_IPV6]: Use ipv6_get_dflt_router.
	* linux-src/net/ipv6/addrconf.c (ipv6_del_addr): Call del_timer
	on ifp->timer. 

2007-10-13  Marco Gerards  <metgerards@student.han.nl>

        * iioctl-ops.c (S_iioctl_siocgifhwaddr): New function.

2007-10-13  Stefan Siegl  <stesie@brokenpipe.de>

	* linux-src/net/ipv6/af_inet6.c (inet6_getname): Initialize
	sin6_scope_id.
	* linux-src/net/ipv6/datagram_ipv6.c (ipv6_recv_error): Likewise.
	* linux-src/net/ipv6/tcp_ipv6.c (v6_addr2sockaddr): Likewise.
	* linux-src/net/ipv6/udp_ipv6.c (udpv6_recvmsg): Likewise.
	* linux-src/net/ipv6/raw_ipv6.c (rawv6_recvmsg): Likewise.
	
	* linux-src/net/ipv6/af_inet6.c (inet6_bind): For link-local IPv6
	addresses copy sin6_scope_id to bound_dev_if and error out unless
	bound.
	* linux-src/net/ipv6/tcp_ipv6.c (tcp_v6_connect): Likewise.
	* linux-src/net/ipv6/udp_ipv6.c (udpv6_connect): Likewise.
	* linux-src/net/ipv6/raw_ipv6.c (rawv6_bind): Likewise.
	
	* linux-src/net/ipv6/raw_ipv6.c (rawv6_sendmsg): For link-local
	IPv6 addresses bind packet to interface specified by sin6_scope_id.
	* linux-src/net/ipv6/udp_ipv6.c (udpv6_sendmsg): Likewise.

2007-10-12  Thomas Schwinge  <tschwinge@gnu.org>
